merging foreign-abi